--- a/Fluent-Design.html
+++ b/Fluent-Design.html
@@ -57,7 +57,12 @@
                             <p>Open ecosystem, open design system.</p>
                         </div>
                     </div>
-                    <div class="media_sc"></div>
+                    <div class="media_sc">
+                        <img src="/img/inner-img-right.png" class="right-line">
+                        <img src="/img/inner-img.png" >
+                        <img src="/img/inner-img-left.png" class="left-line">
+                        
+                    </div>
                 </div>
             </div>
         </main>
