--- a/Fluent-Design.html
+++ b/Fluent-Design.html
@@ -58,9 +58,9 @@
                         </div>
                     </div>
                     <div class="media_sc">
-                        <img src="/img/inner-img-right.png" class="right-line">
-                        <img src="/img/inner-img.png" >
                         <img src="/img/inner-img-left.png" class="left-line">
+                        <img src="/img/inner-img.png" class="mid-line">
+                        <img src="/img/inner-img-right.png" class="right-line">
                         
                     </div>
                 </div>
